--- a/stores-api/build.gradle
+++ b/stores-api/build.gradle
@@ -29,6 +29,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web')
+//	compile('org.springframework.boot:spring-boot-starter-security')
 	compile group: 'io.reactivex', name: 'rxjava', version: '1.2.1'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
